[project]
name = "rizap-condition-check-ai"
version = "0.1.0"
description = "RIZAP コンディションチェックAIエージェント（日次コメント自動生成）"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
